# ant-farm-swarms

./: docker-compose.yml
.github/workflows/: ci.yml
backend/: dockerfile  pyproject.toml
backend/antfarm/: bridge.py  schema.py  web.py  worker.py  worker_mgr.py
backend/tests/: test_health.py  test_spawn_agent.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  Graph.tsx  GraphTab.tsx  Home.tsx  api.ts  types.ts
frontend/src/hooks/: useForceGraph.ts
